Ajout boutons 'Tout etendre' et 'tout reduire'. Correction bug sur le survol des  'bouton_ajoute'. Les tableaux des indicateurs est maintenant 'collapsed' et mis en evidence au survol.

--- a/sources/style/styleCompetences.css
+++ b/sources/style/styleCompetences.css
@@ -21,6 +21,8 @@
 {
 	margin-top:7px;
 	margin-right:3px;
+	margin-bottom:3px;
+	margin-left:7px;
 	box-shadow: 4px 4px 6px #555;
 }
 
@@ -92,7 +94,7 @@ GROUPE COMPETENCES
 /* CONTENU DU GROUPE */
 .groupe_contenu
 {
-	/*display:none;*/
+	display:none;
 }
 
 /* BOUTON AJOUTE COMPETENCES */
@@ -148,6 +150,17 @@ INDICATEURS
 	cursor:pointer;
 }
 
+/*Lignes indicateurs*/
+.listeIndicateurs table
+{
+	border-collapse: collapse;
+}
+
+.listeIndicateurs tr:hover
+{
+	background-color:#BBBBDD;
+}
+
 .indicateurs
 {
 	width:100%;
@@ -158,6 +171,10 @@ INDICATEURS
 	background-color:white;
 	color:gray;
 }
+
+
+
+
 
 
 .indicateurAllume, .indicateurEteint, .indicateurAllumeModifiable, .indicateurEteintModifiable
